c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_minus.c
int main(void) {
    int to_subtract = 10;
    to_subtract -= 8;
    return to_subtract;
}