c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/invalid_variable_name.c
int main(void)
{
    int 10 = 0;
    return 10;
}